glx/testdata/invalid/invalid-assertion-properties/persons/person-child-bob.glx
persons:
  person-bob:
    properties:
      name:
        value: "Robert Thompson"
        fields:
          given: "Robert"
          surname: "Thompson"
      gender: male
